--- a/_static/css/scifi-theme.css
+++ b/_static/css/scifi-theme.css
@@ -74,20 +74,43 @@
     src: url("../fonts/Inconsolata/Inconsolata-VariableFont_wdth-wght.ttf");
 }
 
-.wy-nav-content {
-    background: #f9f8f3;
+.wy-nav-content {    
+    background: #d7dee3;
     max-width:920px;
+    /*! color: white; */
  }
 
-
+div[class*="highlight"] pre {
+    background: #eee;
+}
 
  .wy-side-nav-search, .wy-nav-top {
-   background-color: #537326;
+   background-color: #434253;
  }
 
 .wy-nav-side {
-   background-color: #705d39;
+   background-color: #123456;
+   color: #bcb8b3 !important;
 }
+
+.wy-menu-vertical li.current {
+    background: #3a2424;
+}
+
+.wy-menu-vertical li.on a, .wy-menu-vertical li.current > a {
+    background-color: #5e6b92;
+    
+}
+
+.wy-menu-vertical li.on a:hover, .wy-menu-vertical li.current > a:hover {
+    background: #7d7e89;
+}
+
+
+a.wy-nav-side {
+   color: lightgrey;
+}
+
 
 div.highlight, div.highlight-none, div.highlight-python, div.highlight-bash, div.highlight-ipython3 {
     border-radius:12px;
@@ -157,8 +180,15 @@ div.nbinput.container div.prompt, div.nboutput.container div.prompt{
     width:5px !important;
 }
 
+a {
+    #6083B0 !important
+}
 
 .jupman-sol {    
-    background-color:#ebf3ed !important;  
-    border-color: #d3dfd6 !important;            
+    color: black !important;
+    background-color:#e7e3dd !important;  
+    border-color: #908e92 !important;               
 }
+
+.jupman-sol:hover {    
+ color: #6c6362 !important; 
